--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	},
 	"dependencies": {
 		"@prisma/adapter-libsql": "^7.0.1",
-		"@prisma/adapter-pg": "^7.0.1",
+		"@prisma/adapter-neon": "^7.0.1",
 		"@prisma/client": "^7.0.1",
 		"dotenv": "^17.2.3",
 		"jsonwebtoken": "^9.0.2",
